--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
   <title>Phaser.io</title>
+  <script type="text/javascript" src="js/phaser.min.js"></script>
 </head>
 <body>
-
-
-
-
-  <script type="text/javascript" src="js/phaser.min.js"></script>
   <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
